--- a/airbyte-server/build.gradle
+++ b/airbyte-server/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation project(':airbyte-db')
     implementation project(":airbyte-json-validation")
     implementation project(':airbyte-protocol:models')
-    implementation project(':airbyte-scheduler')
+    implementation project(':airbyte-scheduler:client')
+    implementation project(':airbyte-scheduler:models')
+    implementation project(':airbyte-scheduler:persistence')
     implementation project(':airbyte-workers')
 
     testImplementation "org.postgresql:postgresql:42.2.18"
